objects/vlocity_cmt__VlocityContractServiceLog__c.object
<CustomObject>
    <description>Contains details about contract service requests made.</description>
    <fields>
        <fullName>vlocity_cmt__ContextId__c</fullName>
        <label>Context Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextType__c</fullName>
        <label>Context Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateTimeAccepted__c</fullName>
        <description>DateTime job execution accepted</description>
        <label>DateTime Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateTimeCompleted__c</fullName>
        <description>DateTime job execution completed</description>
        <label>DateTime Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DateTimeStarted__c</fullName>
        <description>DateTime job execution started</description>
        <label>DateTime Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JobType__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SubscribeTenant</fullName>
                    <label>Subscribe Tenant to Service</label>
                </value>
                <value>
                    <fullName>UnsubscribeTenant</fullName>
                    <label>Unsubscribe Tenant from Service</label>
                </value>
                <value>
                    <fullName>CleanupTenantResources</fullName>
                    <label>Cleanup Tenant Resources</label>
                </value>
                <value>
                    <fullName>CreateTemplate</fullName>
                    <label>Publish Template</label>
                </value>
                <value>
                    <fullName>CreateTemplateAsync</fullName>
                    <label>Publish Template (Async)</label>
                </value>
                <value>
                    <fullName>UpsertTemplate</fullName>
                    <label>Republish Template</label>
                </value>
                <value>
                    <fullName>UpsertTemplateAsync</fullName>
                    <label>Republish Template (Async)</label>
                </value>
                <value>
                    <fullName>DeleteTemplate</fullName>
                    <label>Delete Template</label>
                </value>
                <value>
                    <fullName>GenerateDocx</fullName>
                    <default>true</default>
                    <label>Generate DOCX</label>
                </value>
                <value>
                    <fullName>GenerateDocxAsync</fullName>
                    <label>Generate DOCX (Async)</label>
                </value>
                <value>
                    <fullName>GeneratePptx</fullName>
                    <label>Generate PPTX</label>
                </value>
                <value>
                    <fullName>GeneratePptxAsync</fullName>
                    <label>Generate PPTX (Async)</label>
                </value>
                <value>
                    <fullName>GeneratePdf</fullName>
                    <label>Generate PDF</label>
                </value>
                <value>
                    <fullName>GeneratePdfAsync</fullName>
                    <label>Generate PDF (Async)</label>
                </value>
                <value>
                    <fullName>CreateContract</fullName>
                    <label>Create Contract</label>
                </value>
                <value>
                    <fullName>SendEnvelope</fullName>
                    <label>Send Envelope</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestData__c</fullName>
        <label>Request Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ResponseData__c</fullName>
        <label>Response Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VCloudService</fullName>
                    <default>true</default>
                    <label>VCloudService</label>
                </value>
                <value>
                    <fullName>MultiSiteService</fullName>
                    <label>Multi-Site Service</label>
                </value>
                <value>
                    <fullName>GenericDocuSignService</fullName>
                    <label>Generic DocuSign Service</label>
                </value>
                <value>
                    <fullName>ContractDocuSignService</fullName>
                    <label>Contract DocuSign Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <default>true</default>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partially Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VlocityContractServiceLogUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Contract Service Log</label>
    <nameField>
        <label>Job Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Contract Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>